documentacion/obtenida/ARINC 429/driver and software/PC1553-3/API/P13W32VB.BAS


Public Declare Function P13_BCConfig Lib "P13W32.DLL" Alias "_P13_BCConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_BCCreateMsg Lib "P13W32.DLL" Alias "_P13_BCCreateMsg@20" (ByVal configval As Long, ByVal cwd1 As Integer, ByVal cwd2 As Integer, ByRef data As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_BCSchedFrame Lib "P13W32.DLL" Alias "_P13_BCSchedFrame@8" (ByVal timeval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_BCSchedMsg Lib "P13W32.DLL" Alias "_P13_BCSchedMsg@8" (ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_BCSchedRetry Lib "P13W32.DLL" Alias "_P13_BCSchedRetry@12" (ByVal condition As Integer, ByVal retries As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_BCTransmitMsg Lib "P13W32.DLL" Alias "_P13_BCTransmitMsg@8" (ByRef xmitfieldsval As XMITFIELDS, ByVal handleval As Long) As Long
Public Declare Function P13_CardClose Lib "P13W32.DLL" Alias "_P13_CardClose@4" (ByVal handleval As Long) As Long
Public Declare Function P13_CardOpen Lib "P13W32.DLL" Alias "_P13_CardOpen@16" (ByVal memval As Long, ByVal ioval As Integer, ByVal irqval As Integer, ByVal drqval As Integer) As Long
Public Declare Function P13_CardOpenP12 Lib "P13W32.DLL" Alias "_P13_CardOpenP12@16" (ByVal memval As Long, ByVal ioval As Integer, ByVal irqval As Integer, ByVal drqval As Integer) As Long
Public Declare Function P13_CardReset Lib "P13W32.DLL" Alias "_P13_CardReset@4" (ByVal handleval As Long) As Long
Public Declare Function P13_CardStart Lib "P13W32.DLL" Alias "_P13_CardStart@4" (ByVal handleval As Long) As Long
Public Declare Function P13_CardStop Lib "P13W32.DLL" Alias "_P13_CardStop@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ErrorCtrl Lib "P13W32.DLL" Alias "_P13_ErrorCtrl@8" (ByVal ctrlval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_ErrorDefine Lib "P13W32.DLL" Alias "_P13_ErrorDefine@24" (ByVal defineval As Long, ByVal errvalue As Integer, ByVal countval As Long, ByVal wordpos As Integer, ByVal bitpos As Integer, ByVal handleval As Long) As Long
Public Declare Function P13_ErrorSent Lib "P13W32.DLL" Alias "_P13_ErrorSent@4" (ByVal handleval As Long) As Long
Public Declare Function P13_ErrorTagBC Lib "P13W32.DLL" Alias "_P13_ErrorTagBC@12" (ByVal tagval As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_ErrorTagRT Lib "P13W32.DLL" Alias "_P13_ErrorTagRT@24" (ByVal tagval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MonConfig Lib "P13W32.DLL" Alias "_P13_MonConfig@8" (ByVal configval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MonFilterSA Lib "P13W32.DLL" Alias "_P13_MonFilterSA@24" (ByVal taval As Long, ByVal rcvsamask As Long, ByVal xmtsamask As Long, ByVal rcvmcmask As Long, ByVal xmtmcmask As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MonFilterTA Lib "P13W32.DLL" Alias "_P13_MonFilterTA@8" (ByVal tamask As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MonIsRunning Lib "P13W32.DLL" Alias "_P13_MonIsRunning@4" (ByVal handleval As Long) As Long
Public Declare Function P13_MonRd Lib "P13W32.DLL" Alias "_P13_MonRd@8" (ByRef buf As Integer, ByVal handleval As Long) As Integer
Public Declare Function P13_MsgDataRd Lib "P13W32.DLL" Alias "_P13_MsgDataRd@16" (ByRef buf As Integer, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgDataWr Lib "P13W32.DLL" Alias "_P13_MsgDataWr@16" (ByRef buf As Integer, ByVal count As Long, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgFieldRd Lib "P13W32.DLL" Alias "_P13_MsgFieldRd@12" (ByVal fieldtype As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_MsgFieldWr Lib "P13W32.DLL" Alias "_P13_MsgFieldWr@16" (ByVal fieldval As Long, ByVal fieldtype As Integer, ByVal msgaddr As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RTConfig Lib "P13W32.DLL" Alias "_P13_RTConfig@12" (ByVal configval As Long, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RTCreateMsg Lib "P13W32.DLL" Alias "_P13_RTCreateMsg@24" (ByVal configval As Long, ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RTGetMsg Lib "P13W32.DLL" Alias "_P13_RTGetMsg@20" (ByVal mcflag As Long, ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_RTSWDWr Lib "P13W32.DLL" Alias "_P13_RTSWDWr@12" (ByVal swdval As Integer, ByVal taval As Long, ByVal handleval As Long) As Long
Public Declare Function P13_ValPackCWD Lib "P13W32.DLL" Alias "_P13_ValPackCWD@16" (ByVal taval As Long, ByVal trflag As Long, ByVal saval As Long, ByVal wcval As Long) As Integer
Public Declare Function P13_ValUnpackCWD Lib "P13W32.DLL" Alias "_P13_ValUnpackCWD@20" (ByVal cwdval As Integer, ByRef taval As Long, ByRef trflag As Long, ByRef saval As Long, ByRef wcval As Long) As Long
Public Declare Function PC1553_Bitset Lib "P13W32.DLL" Alias "_PC1553_Bitset@12" (ByVal wordval As Integer, ByVal bitvalue As Long, ByVal bitnum As Long) As Integer
Public Declare Function PC1553_Bittest Lib "P13W32.DLL" Alias "_PC1553_Bittest@8" (ByVal wordval As Integer, ByVal bitnum As Long) As Long
Public Declare Function PC1553_Clearlist Lib "P13W32.DLL" Alias "_PC1553_Clearlist@4" (ByVal fh As Long) As Long
Public Declare Function PC1553_Config Lib "P13W32.DLL" Alias "_PC1553_Config@16" (ByVal reg0 As Long, ByVal reg1 As Long, ByVal reg2 As Long, ByVal portval As Long) As Long
Public Declare Function PC1553_Execute Lib "P13W32.DLL" Alias "_PC1553_Execute@24" (ByRef nameptr As String, ByRef swdptr As Integer, ByRef dwdptr As Long, ByVal segval As Long, ByVal portval As Long, ByVal fh As Long) As Long
Public Declare Function PC1553_Freedrv Lib "P13W32.DLL" Alias "_PC1553_Freedrv@0" () As Long
Public Declare Function PC1553_Loadlist Lib "P13W32.DLL" Alias "_PC1553_Loadlist@4" (ByRef filename As String) As Long
Public Declare Function PC1553_Maskshift Lib "P13W32.DLL" Alias "_PC1553_Maskshift@12" (ByVal inputval As Integer, ByVal startbit As Long, ByVal lengthval As Long) As Integer
Public Declare Function PC1553_Packcwd Lib "P13W32.DLL" Alias "_PC1553_Packcwd@16" (ByVal taval As Long, ByVal trval As Long, ByVal saval As Long, ByVal wcval As Long) As Integer
Public Declare Function PC1553_Packwd Lib "P13W32.DLL" Alias "_PC1553_Packwd@16" (ByVal inputval As Integer, ByVal oldval As Integer, ByVal startbit As Long, ByVal lengthval As Long) As Integer
Public Declare Function PC1553_Readbcdwd Lib "P13W32.DLL" Alias "_PC1553_Readbcdwd@16" (ByVal countval As Long, ByVal startval As Long, ByRef destptr As Long, ByVal segval As Long) As Long
Public Declare Function PC1553_Readresp Lib "P13W32.DLL" Alias "_PC1553_Readresp@4" (ByVal portval As Long) As Long
Public Declare Function PC1553_Readrtdwd Lib "P13W32.DLL" Alias "_PC1553_Readrtdwd@24" (ByVal trval As Long, ByVal saval As Long, ByVal countval As Long, ByVal startval As Long, ByRef destptr As Long, ByVal segval As Long) As Long
Public Declare Function PC1553_Readwd Lib "P13W32.DLL" Alias "_PC1553_Readwd@8" (ByVal offset As Long, ByVal segval As Long) As Long
Public Declare Function PC1553_Transmit Lib "P13W32.DLL" Alias "_PC1553_Transmit@4" (ByVal portval As Long) As Long
Public Declare Function PC1553_Writebcdwd Lib "P13W32.DLL" Alias "_PC1553_Writebcdwd@16" (ByVal countval As Long, ByVal startval As Long, ByRef srcptr As Long, ByVal segval As Long) As Long
Public Declare Function PC1553_Writertdwd Lib "P13W32.DLL" Alias "_PC1553_Writertdwd@24" (ByVal trval As Long, ByVal saval As Long, ByVal countval As Long, ByVal startval As Long, ByRef srcptr As Long, ByVal segval As Long) As Long
Public Declare Function PC1553_Writewd Lib "P13W32.DLL" Alias "_PC1553_Writewd@12" (ByVal value As Long, ByVal offset As Long, ByVal segval As Long) As Long
Public Declare Function P12_Bitset Lib "P13W32.DLL" Alias "_P12_Bitset@12" (ByVal wordval As Integer, ByVal bitvalue As Long, ByVal bitnum As Long) As Integer
Public Declare Function P12_Bittest Lib "P13W32.DLL" Alias "_P12_Bittest@8" (ByVal wordval As Integer, ByVal bitnum As Long) As Long
Public Declare Function P12_Checklist Lib "P13W32.DLL" Alias "_P12_Checklist@4" (ByVal fh As Long) As Long
Public Declare Function P12_Clearlist Lib "P13W32.DLL" Alias "_P12_Clearlist@4" (ByVal fh As Long) As Long
Public Declare Function P12_Config Lib "P13W32.DLL" Alias "_P12_Config@16" (ByVal reg0 As Long, ByVal reg1 As Long, ByVal reg2 As Long, ByVal handleval As Long) As Long
Public Declare Function P12_Execconfig Lib "P13W32.DLL" Alias "_P12_Execconfig@12" (ByRef nameptr As String, ByVal fh As Long, ByVal handleval As Long) As Long
Public Declare Function P12_Execmsg Lib "P13W32.DLL" Alias "_P12_Execmsg@20" (ByRef nameptr As String, ByRef bufptr As Long, ByRef swdptr As Integer, ByVal fh As Long, ByVal handleval As Long) As Long
Public Declare Function P12_Execute Lib "P13W32.DLL" Alias "_P12_Execute@20" (ByRef nameptr As String, ByRef swdptr As Integer, ByRef dwdptr As Long, ByVal fh As Long, ByVal handleval As Long) As Long
Public Declare Function P12_Freedrv Lib "P13W32.DLL" Alias "_P12_Freedrv@0" () As Long
Public Declare Function P12_In Lib "P13W32.DLL" Alias "_P12_In@8" (ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P12_Loadlist Lib "P13W32.DLL" Alias "_P12_Loadlist@4" (ByRef filename As String) As Long
Public Declare Function P12_Locate Lib "P13W32.DLL" Alias "_P12_Locate@12" (ByVal keytype As Long, ByRef nameptr As String, ByVal fh As Long) As Long
Public Declare Function P12_Maskshift Lib "P13W32.DLL" Alias "_P12_Maskshift@12" (ByVal inputval As Integer, ByVal startbit As Long, ByVal lengthval As Long) As Integer
Public Declare Function P12_Out Lib "P13W32.DLL" Alias "_P12_Out@12" (ByVal dataval As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function P12_Packcwd Lib "P13W32.DLL" Alias "_P12_Packcwd@16" (ByVal taval As Long, ByVal trval As Long, ByVal saval As Long, ByVal wcval As Long) As Integer
Public Declare Function P12_Packwd Lib "P13W32.DLL" Alias "_P12_Packwd@16" (ByVal inputval As Integer, ByVal oldval As Integer, ByVal startbit As Long, ByVal lengthval As Long) As Integer
Public Declare Function P12_Readb Lib "P13W32.DLL" Alias "_P12_Readb@4" (ByVal fh As Long) As Long
Public Declare Function P12_Readbcdwd Lib "P13W32.DLL" Alias "_P12_Readbcdwd@16" (ByVal countval As Long, ByVal startval As Long, ByRef destptr As Long, ByVal handleval As Long) As Long
Public Declare Function P12_Readresp Lib "P13W32.DLL" Alias "_P12_Readresp@4" (ByVal handleval As Long) As Long
Public Declare Function P12_Readrtdwd Lib "P13W32.DLL" Alias "_P12_Readrtdwd@24" (ByVal trval As Long, ByVal saval As Long, ByVal countval As Long, ByVal startval As Long, ByRef destptr As Long, ByVal handleval As Long) As Long
Public Declare Function P12_Readw Lib "P13W32.DLL" Alias "_P12_Readw@4" (ByVal fh As Long) As Long
Public Declare Function P12_Readwd Lib "P13W32.DLL" Alias "_P12_Readwd@8" (ByVal offset As Long, ByVal handleval As Long) As Long
Public Declare Function P12_Readwds Lib "P13W32.DLL" Alias "_P12_Readwds@16" (ByVal offval As Long, ByRef destptr As Long, ByVal cntval As Long, ByVal handleval As Long) As Long
Public Declare Function P12_Transmit Lib "P13W32.DLL" Alias "_P12_Transmit@4" (ByVal handleval As Long) As Long
